Remove old JS files

--- a/generators/sammy_crud/templates/erb/index.html.erb
+++ b/generators/sammy_crud/templates/erb/index.html.erb
@@ -13,9 +13,7 @@
 </table>
 
 <div id="<%= plural %>_notif" style="display:none"></div>
-<a href="#/new">
-  <img src="/images/sammy_crud/add.png" alt="add" width="16" height="16" border="0"/>
-</a>
+<a href="#/new"><img src="/images/sammy_crud/add.png" alt="add" width="16" height="16" border="0"/></a>
 <a href="#/new">Add a new <%= model_name %></a>
 
 <div id="<%= plural %>_edit" style="display: none"></div>
