--- a/generators/sammy_crud/templates/haml/_show.html.haml
+++ b/generators/sammy_crud/templates/haml/_show.html.haml
@@ -1,7 +1,7 @@
-<% klass.columns.each do |col| -%>
+<% columns.each do |col| -%>
 %p
   %strong
-    <%= col.name.camelcase %>
+    <%= col[0].camelcase %>
   %br/
-  = <%= model_name -%>.<%= col.name.downcase %>
+  = <%= model_name -%>.<%= col[0].downcase %>
 <% end -%>
